force-app/main/default/objects/OpportunityLineItem/fields/product_end_date__c.field-meta.xml
<CustomField>
    <fullName>product_end_date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>