force-app/main/default/objects/OpportunityLineItem/fields/product_start_date__c.field-meta.xml
<CustomField>
    <fullName>product_start_date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>