force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Item_Name__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Item_Name__c</fullName>
    <inlineHelpText>Item Name of the transaction being renewed from SaaSOptcs.</inlineHelpText>
    <label>SaaSOptics Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>