force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__original_arr__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__original_arr__c</fullName>
    <inlineHelpText>ARR of the original transaction in SaaSOptics</inlineHelpText>
    <label>SaaSOptics Original ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>