force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_End_Date__c</fullName>
    <inlineHelpText>End Date of the transaction in SaaSOptics being renewed.</inlineHelpText>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>