force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_MRR__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_MRR__c</fullName>
    <inlineHelpText>MRR of the transaction being renewed from SaaSOptcs.</inlineHelpText>
    <label>Original MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>