force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the original opportunity in Salesforce</inlineHelpText>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>