force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_Order_Date__c</fullName>
    <inlineHelpText>Order Date of the transaction being renewed from SaaSOptcs.</inlineHelpText>
    <label>Original Order Date</label>
    <type>Date</type>
</CustomField>