force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_Quantity__c</fullName>
    <inlineHelpText>Quantity of the transaction being renewed from SaaSOptcs.</inlineHelpText>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>