force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Original_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Original_Start_Date__c</fullName>
    <inlineHelpText>Start date of the transaction being renewed from SaaSOptics.</inlineHelpText>
    <label>Original Start Date</label>
    <type>Date</type>
</CustomField>