force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__Transaction_Number__c</fullName>
    <inlineHelpText>Transaction number of the transaction being renewed from SaaSOptcs.</inlineHelpText>
    <label>SaaSOptics Transaction Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>