force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__tx_action__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__tx_action__c</fullName>
    <label>SaaSOptics Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renew at End of Term</fullName>
                <default>true</default>
                <label>Renew at End of Term</label>
            </value>
            <value>
                <fullName>Cancel at End of Term</fullName>
            </value>
            <value>
                <fullName>Contract Change</fullName>
            </value>
            <value>
                <fullName>Early Termination</fullName>
            </value>
            <value>
                <fullName>Reverse</fullName>
            </value>
            <value>
                <fullName>Simple Edit</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>(No Action)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>