force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__tx_id__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__tx_id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SaaSOptics Transaction ID</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>