force-app/main/default/objects/OpportunityLineItem/fields/saasoptics__URL__c.field-meta.xml
<CustomField>
    <fullName>saasoptics__URL__c</fullName>
    <inlineHelpText>Link to the transaction being renewed in SaaSOptics</inlineHelpText>
    <label>SaaSOptics URL</label>
    <type>Url</type>
</CustomField>